[project]
name = "collect-single"
version = "1.0.0"
authors = [{name="Some Engineering Inc."}]
description = "Single collect run coordinator."
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3" ]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [ "resotocore", "resotoworker" ]

[project.scripts]
collect_single_coordinator = "collect_single_coordinator.__main__:main"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

